1999-02-17  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* server-src/amtoc.pl.in: minor fixes for multi-tape runs

1999-02-17  Nicolas Mayencourt  <Nicolas.Mayencourt@cui.unige.ch>

	* server-src/amtoc.pl.in: complete, backward-incompatible rewrite;
	command-line arguments changed
	* man/amtoc.8.in: ditto

1999-02-17  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* changer-src/chg-multi.sh.in: minor portability changes
	* docs/TAPE.CHANGERS: originally by James da Silva

1999-02-17  Jean-Francois Dockes <dockes@cdkit.remcomp.fr>

	* changer-src/chg-multi.sh.in: various portability changes and
	general fixes, particularly for multieject; new cycle mode
	* docs/TAPE.CHANGERS: detailed description of chg-multi
	* example/chg-multi.conf: updated; added reference to
	docs/TAPE.CHANGERS for details

1999-02-16  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/driverio.h: remove declaration of addfd.
	* server-src/driverio.c (addfd): 2 new arguments, readset and maxfd,
	don't use global variable.
	* server-src/driverio.c (startup_tape_process, startup_dump_process):
	call addfd with new argument.

1999-02-15  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/driverio.c (startup_tape_process): new taper_program
	argument.
	* server-src/driverio.h: remove declaration of taper_program.
	* server-src/driver.c (main): declare taper_program.
	* server-src/driver.c: call startup_tape_process with the new 
	taper_program argument.
	* server-src/amflush.c (run_dumps): declare taper_program.
	* server-src/amflush.c (run_dumps): call startup_tape_process with 
	the new taper_program argument.

1999-02-15  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/driverio.c (startup_dump_process, startup_dump_processes):
	new dumper_program argument.
	* server-src/driverio.h: remove declaration of dumper_program.
	* server-src/driver.c: declare dumper_program.
	* server-src/driver.c: call startup_dump_process and